infrastructure/controllers/staging/longhorn/csi-snapshotter-fix.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: csi-snapshotter-fix
  namespace: longhorn-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csi-snapshotter-fix
  template:
    metadata:
      labels:
        app: csi-snapshotter-fix
    spec:
      serviceAccount: longhorn-service-account
      containers:
        - name: csi-snapshotter
          image: registry.k8s.io/sig-storage/csi-snapshotter:v6.2.1
          args:
            - "--v=5"
            - "--csi-address=$(ADDRESS)"
            - "--leader-election=true"
            - "--snapshot-name-prefix=velero"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
      volumes:
        - name: socket-dir
          hostPath:
            path: /var/lib/kubelet/plugins/driver.longhorn.io
            type: DirectoryOrCreate
