infrastructure/controllers/staging/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - longhorn.timourhomelab.org
    secretName: longhorn-tls
  rules:
  - host: longhorn.timourhomelab.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
